<?xml version="1.0" encoding="utf-8"?>

<!-- Elements are held in a ConstraintLayout -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFragment"
    tools:ignore="TextSizeCheck">

    <!-- Warnings about text expansion for static fields are ignored here -->
    <!-- However accessibility has been maximised through the use of content description and hints -->

    <TextView
        android:id="@+id/tvAddAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/label_add_transaction"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Display a pound sign before the amount field -->
    <!-- Helps users to identify editTextAmount as a currency field -->
    <TextView
        android:id="@+id/tvPoundSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/label_pound_sign"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddAmount" />


    <!-- User input for amount field -->
    <!-- Restricted to one line and 32 chars -->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextAmount"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:hint="@string/hint_amount"
        android:inputType="number"
        android:maxLength="32"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddAmount" />


    <TextView
        android:id="@+id/tvSetType"
        android:layout_width="138dp"
        android:layout_height="26dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:text="@string/label_select_type"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <!-- Allows users to select between incoming & outgoing transactions -->
    <RadioGroup
        android:id="@+id/radioGroupSelectType"
        android:layout_width="134dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSetType"
        tools:ignore="TextSizeCheck">

        <RadioButton
            android:id="@+id/rbIncoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rb_incoming" />

        <RadioButton
            android:id="@+id/rbOutgoing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_outgoing" />
    </RadioGroup>


    <TextView
        android:id="@+id/tvSetCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/label_set_a_category"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAmount" />

    <!-- Display each category as a Chip -->
    <!-- Chips are styled to be a choice- users can only select one category at a time -->
    <!-- singleSelection is set to 'true' to facilitate this -->
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupCategories"
        android:layout_width="189dp"
        android:layout_height="240dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSetCategory"
        app:singleSelection="true" />

    <TextView
        android:id="@+id/tvSetRepeat"
        android:layout_width="138dp"
        android:layout_height="26dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:text="@string/label_repeat_duration"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSelectType"
        tools:ignore="TextSizeCheck" />

    <!-- Allows users to select a repeat duration for the transaction -->
    <RadioGroup
        android:id="@+id/radioGroupSelectRepeat"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSetRepeat">

        <RadioButton
            android:id="@+id/rbNever"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rb_never" />

        <RadioButton
            android:id="@+id/rbDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_day" />

        <RadioButton
            android:id="@+id/rbWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_week" />

        <RadioButton
            android:id="@+id/rbMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_month" />

        <RadioButton
            android:id="@+id/rbYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_year" />
    </RadioGroup>


    <TextView
        android:id="@+id/tvDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/label_date_time"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupCategories" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextDate"
        android:layout_width="211dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hint_set_date"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDateTime" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hint_set_time"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/cd_add_transaction"
        android:focusable="true"
        android:src="@drawable/add_icon"
        app:backgroundTint="@color/budgetBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white"
        tools:ignore="ClassNameCheck,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>