<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.OverviewFragment">


    <LinearLayout
        android:id="@+id/overviewLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/overviewAddButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_budget_remaining"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvBudgetRemaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/placeholder_budget_amount"
            android:textColor="@color/brightGreen"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvTotalBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/placeholder_monthly_budget"
            android:textColor="?attr/colorOnSurfaceVariant" />

        <LinearLayout
            android:id="@+id/pieChartContainer"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pieChartLegend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                tools:itemCount="4"
                tools:listitem="@layout/legend_item">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <TextView
            android:id="@+id/tvRecentTransactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/label_recent_transactions"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPartialHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:itemCount="6"
            tools:listitem="@layout/transaction_item" />

    </LinearLayout>

    <!-- Include the empty layout for no-transaction state-->
    <include
        android:id="@+id/overviewEmptyState"
        layout="@layout/empty_layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/overviewAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/budgetBlue"
        android:clickable="true"
        android:contentDescription="@string/cd_add_transaction"
        android:focusable="true"
        android:src="@drawable/add_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white"
        tools:ignore="ClassNameCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>